Add rmd option to turn off drawing mcmc diagnostic plots

--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -8,6 +8,10 @@ params:
     value: CAT
     input: select
     choices: [CAT, LOS, UGR]
+  mcmc_plots:
+    label: "Make MCMC Plots"
+    input: checkbox
+    value: FALSE
 editor_options: 
   chunk_output_type: console
 ---
@@ -121,35 +125,35 @@ kable(df, align = "lcccccccccc") %>%
 
 ```
 
-## Diagnostic Plots {.tabset .tabset-pills}
+`r if (params$mcmc_plots) "## Diagnostic Plots {.tabset .tabset-pills}"`
 
-### `alpha`, `beta`
+`r if (params$mcmc_plots) "### $\\alpha$, $\\beta$"`
 
-```{r alpha-beta-diag-plots, fig.width = 4, fig.height = 5}
+```{r alpha-beta-diag-plots, eval = params$mcmc_plots, fig.width = 4, fig.height = 5}
 diag_plots(post, c("alpha", "beta"), layout = "2x1")
 ```
 
-### `gamma`
+`r if (params$mcmc_plots) "### $\\gamma$"`
 
-```{r gamma-diag-plots, fig.width = 3, fig.height = 6}
+```{r gamma-diag-plots, eval = params$mcmc_plots, fig.width = 3, fig.height = 6}
 diag_plots(post, "gamma", layout = "4x1")
 ```
 
-### `^mu`
+`r if (params$mcmc_plots) "### $\\mu$"`
 
-```{r mu-diag-plots, fig.width = 7, fig.height = 7}
+```{r mu-diag-plots, eval = params$mcmc_plots, fig.width = 7, fig.height = 7}
 diag_plots(post, "^mu", layout = "5x3")
 ```
 
-### `^sig`
+`r if (params$mcmc_plots) "### $$\\sigma$"`
 
-```{r sig-diag-plots, fig.width = 7, fig.height = 7}
+```{r sig-diag-plots, eval = params$mcmc_plots, fig.width = 7, fig.height = 7}
 diag_plots(post, "^sig", layout = "5x3")
 ```
 
-### `init_recruits`
+`r if (params$mcmc_plots) "### init_recruits"`
 
-```{r init-recruits-diag-plots, fig.width = 5, fig.height = 7}
+```{r init-recruits-diag-plots, eval = params$mcmc_plots, fig.width = 5, fig.height = 7}
 diag_plots(post, "init_recruits", layout = "4x2")
 ```
 
