--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -385,6 +385,113 @@ mtext(side = 1, line = 1, outer = T, "LH-Specific Parr/PEU", cex = 1.2)
 mtext(side = 2, line = 1, outer = T, "Overwinter Survival", cex = 1.2)
 ```
 
+# Smolt-to-Adult Rates
+
+This is survival from $Mb$ (smolts in tributary, prior to mortality associated with movement to LGD) to $Ra$ (adults returning to tributary, vulnerable to being counted at weir).
+
+The adult part is calculated across return years, by summing the number of adults of each age (regardless of sex) that return in the appropriate years. For example, the SAR for brood year 1991 uses smolt that were spawned in 1991, out-migrated in spring 1993, divided by the sum of age 3 adults in 1994, age 4 adults in 1995, and age 5 adults in 1996. The calculation is done for hatchery and natural origin fish separately. Only SARs through brood year 2014 are calculated, since this is the last year of complete adult returns.
+
+Other SARS could be calculated, but currently this is the only one that is comparable between hatchery and natural origins.
+
+```{r}
+# function to calculate posterior 
+get_SAR_post = function(post, jags_data) {
+  # extract posterior abundances
+  Ra_post = post_subset(post, "^Ra[", T) # adults returning to tributary
+  Mb_post = post_subset(post, "^Mb[", T) # smolts leaving tributary in spring
+  
+  # number of saved samples
+  ni = post_dim(post, "saved")
+  
+  # first and last brood year SAR can be calculated for
+  first_SAR_y = jags_data$kmax + 1
+  last_SAR_y = jags_data$ny - jags_data$kmax
+  
+  # containers
+  nat_SAR = hat_SAR = NULL
+  
+  # loop over mcmc iters
+  for (i in 1:ni) {
+    # extract quantities for this iter
+    Ra = array_format(Ra_post[i,])
+    Mb = array_format(Mb_post[i,])
+    
+    # give names
+    dimnames(Ra) = dimnames(jags_data$p_remove)
+    dimnames(Mb) = dimnames(jags_data$Mb_obs)
+    
+    # drop sex structure from Ra
+    Ra = Ra[,,1,] + Ra[,,2,]
+    
+    # loop over years
+    nat_SAR_i = hat_SAR_i = NULL
+    for (y in first_SAR_y:last_SAR_y) {
+      # sum up smolts across life history types
+      nat_smolt = sum(Mb[y,,"Nat"])
+      hat_smolt = sum(Mb[y,,"Hat"], na.rm = T)
+      
+      # sum up returing adults from this brood
+      nat_adults = Ra[y+3,1,"Nat"] + Ra[y+4,2,"Nat"] + Ra[y+5,3,"Nat"]
+      hat_adults = Ra[y+3,1,"Hat"] + Ra[y+4,2,"Hat"] + Ra[y+5,3,"Hat"]
+      
+      nat_SAR_i = c(nat_SAR_i, nat_adults/nat_smolt)
+      hat_SAR_i = c(hat_SAR_i, hat_adults/hat_smolt)
+    }
+    
+    # combine with other mcmc iters
+    nat_SAR = rbind(nat_SAR, nat_SAR_i)
+    hat_SAR = rbind(hat_SAR, hat_SAR_i)
+  }
+  
+  colnames(nat_SAR) = paste0("SAR[", first_SAR_y:last_SAR_y, ",1]")
+  colnames(hat_SAR) = paste0("SAR[", first_SAR_y:last_SAR_y, ",2]")
+  
+  # drop out SAR years for hatchery fish where missing
+  hat_SAR = hat_SAR[,!is.na(colSums(hat_SAR))]
+  
+  out = cbind(nat_SAR, hat_SAR)
+  return(out)
+}
+
+# apply the function
+SAR_post = get_SAR_post(post, jags_data)
+
+# combine samples with main posterior object
+post = post_bind(post, SAR_post)
+
+# calculate/format posterior summaries
+SAR_mean = array_format(post_summ(post, "SAR")["mean",]) * 100
+SAR_lwr = array_format(post_summ(post, "SAR")["2.5%",]) * 100
+SAR_upr = array_format(post_summ(post, "SAR")["97.5%",]) * 100
+
+# subset years
+all_yrs = as.numeric(dimnames(jags_data$Pa_obs)[[1]])
+SAR_yrs = all_yrs[1:nrow(SAR_mean)]
+
+# graphics device
+par(mar = c(3,3,1,1), mgp = c(2,0.35,0), tcl = -0.2)
+
+# blank plot with appropriate dimensions
+plot(SAR_mean[,1] ~ SAR_yrs, ylab = "Adults/100 Smolt", xlab = "Brood Year",
+     xlim = range(all_yrs), ylim = c(0, max(SAR_upr, na.rm = T)), type = "n", las = 1)
+
+# draw posterior summary for natural origin
+polygon(x = c(SAR_yrs, rev(SAR_yrs)), y = c(SAR_lwr[,1], rev(SAR_upr[,1])), col = alpha("skyblue2", 0.5), border = NA)
+lines(SAR_lwr[,1] ~ SAR_yrs, col = "blue", lty = 2)
+lines(SAR_upr[,1] ~ SAR_yrs, col = "blue", lty = 2)
+lines(SAR_mean[,1] ~ SAR_yrs, col = "blue", lwd = 2)
+
+# draw posterior summary for hatchery origin
+polygon(x = c(SAR_yrs, rev(SAR_yrs)), y = c(SAR_lwr[,2], rev(SAR_upr[,2])), col = alpha("salmon", 0.5), border = NA)
+lines(SAR_lwr[,2] ~ SAR_yrs, col = "red", lty = 2)
+lines(SAR_upr[,2] ~ SAR_yrs, col = "red", lty = 2)
+lines(SAR_mean[,2] ~ SAR_yrs, col = "red", lwd = 2)
+
+# draw a legend
+legend("topright", legend = c("Natural", "Hatchery"), title = "Origin",
+       pch = 22, col = c("blue", "red"), pt.cex = 2, pt.bg = alpha(c("skyblue2", "salmon"), 0.5), bty = "n")
+```
+
 # Parameter Estimates {.tabset .tabset-pills}
 
 **Quick refresher on parameter names**
