--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -90,8 +90,7 @@ diag_params = list(
   c("^sig_Lomega", "^sig_Lpi"),
   "^Pb[", 
   "init_recruits", 
-  "^phi_Ma_M", "^phi_Mb_Ma[.+,2]", "^phi_Pa_Mb[.+,1]", "^phi_Pa_Mb[.+,2]",
-  "^phi_Mb_M["
+  "^phi_Ma_M", "^phi_Mb_Ma[.+,2]", "^phi_Pa_Mb[.+,1]", "^phi_Pa_Mb[.+,2]"
 )
 
 # calculate the diagnostic statistics for each group
@@ -188,12 +187,13 @@ mtext(side = 2, outer = T, line = 0.25, "Abundance")
 
 ## Survival Data
 
-```{r survival-data-fits, fig.width = 3, fig.height = 5}
-par(mfcol = c(3,1), oma = c(1.5,1.5,0,0))
+```{r survival-data-fits, fig.width = 3, fig.height = 6}
+par(mfcol = c(4,1), oma = c(1.5,1.5,0,0))
 
-plot_tseries(post_summ(post, "^phi_Pb_Ma["), expit(jags_data$Lphi_obs_Pb_Ma[observable]), main = "Summer Tagging to LGD")
-plot_tseries(post_summ(post, "^phi_Pa_Ma[.+,1]$"), expit(jags_data$Lphi_obs_Pa_Ma[observable,1]), main = "Fall Trap to LGD")
-plot_tseries(post_summ(post, "^phi_Mb_Ma[.+,2]$"), expit(jags_data$Lphi_obs_Mb_Ma[observable,2]), main = "Spring Trap to LGD")
+plot_tseries(post_summ(post, "^phi_Pb_Ma["), expit(jags_data$Lphi_obs_Pb_Ma[observable]), main = "(Nat) Summer Tagging to LGD")
+plot_tseries(post_summ(post, "^phi_Pa_Ma[.+,1]$"), expit(jags_data$Lphi_obs_Pa_Ma[observable,1]), main = "(Nat) Fall Trap to LGD")
+plot_tseries(post_summ(post, "^phi_Mb_Ma[.+,2,1]$"), expit(jags_data$Lphi_obs_Mb_Ma[observable,2,1]), main = "(Nat) Spring Trap to LGD")
+plot_tseries(post_summ(post, "^phi_Mb_Ma[.+,2,2]$"), expit(jags_data$Lphi_obs_Mb_Ma[observable,2,2]), main = "(Hat) Spring Release to LGD")
 mtext(side = 1, outer = T, line = 0.25, "Brood Year")
 mtext(side = 2, outer = T, line = 0.25, "Survival")
 ```
@@ -401,18 +401,16 @@ mtext(side = 2, line = 1, outer = T, "Overwinter Survival", cex = 1.2)
 
 # Smolt-to-Adult Rates
 
-This is survival from $Mb$ (smolts in tributary, prior to mortality associated with movement to LGD) to $Ra$ (adults returning to tributary, vulnerable to being counted at weir).
+This is survival from $Ma$ (smolts at the top of LGD) to $Ra$ (adults returning to tributary, vulnerable to being counted at weir).
 
 The adult part is calculated across return years, by summing the number of adults of each age (regardless of sex) that return in the appropriate years. For example, the SAR for brood year 1991 uses smolt that were spawned in 1991, out-migrated in spring 1993, divided by the sum of age 3 adults in 1994, age 4 adults in 1995, and age 5 adults in 1996. The calculation is done for hatchery and natural origin fish separately. Only SARs through brood year 2014 are calculated, since this is the last year of complete adult returns.
-
-Other SARS could be calculated, but currently this is the only one that is comparable between hatchery and natural origins.
 
 ```{r sar-plot}
 # function to calculate posterior 
 get_SAR_post = function(post, jags_data) {
   # extract posterior abundances
-  Ra_post = post_subset(post, "^Ra[", T) # adults returning to tributary
-  Mb_post = post_subset(post, "^Mb[", T) # smolts leaving tributary in spring
+  Ra_post = post_subset(post, "^Ra[", T) # adults returning to Columbia River mouth
+  Ma_post = post_subset(post, "^Ma[", T) # smolts at top of LGD
   
   # number of saved samples
   ni = post_dim(post, "saved")
@@ -428,11 +426,11 @@ get_SAR_post = function(post, jags_data) {
   for (i in 1:ni) {
     # extract quantities for this iter
     Ra = array_format(Ra_post[i,])
-    Mb = array_format(Mb_post[i,])
+    Ma = array_format(Ma_post[i,])
     
     # give names
     dimnames(Ra) = dimnames(jags_data$p_remove)
-    dimnames(Mb) = dimnames(jags_data$Mb_obs)
+    dimnames(Ma) = dimnames(jags_data$Mb_obs)
     
     # drop sex structure from Ra
     Ra = Ra[,,1,] + Ra[,,2,]
@@ -441,10 +439,10 @@ get_SAR_post = function(post, jags_data) {
     nat_SAR_i = hat_SAR_i = NULL
     for (y in first_SAR_y:last_SAR_y) {
       # sum up smolts across life history types
-      nat_smolt = sum(Mb[y,,"Nat"])
-      hat_smolt = sum(Mb[y,,"Hat"], na.rm = T)
+      nat_smolt = sum(Ma[y,,"Nat"])
+      hat_smolt = sum(Ma[y,,"Hat"])
       
-      # sum up returing adults from this brood
+      # sum up returning adults from this brood
       nat_adults = Ra[y+3,1,"Nat"] + Ra[y+4,2,"Nat"] + Ra[y+5,3,"Nat"]
       hat_adults = Ra[y+3,1,"Hat"] + Ra[y+4,2,"Hat"] + Ra[y+5,3,"Hat"]
       
@@ -526,8 +524,7 @@ _In alphabetical order, as displayed in figures_
 
 * `mu_omega[1]`: mean probability of being a female at ocean entry
 * `mu_phi_Ma_M`: mean probability of surviving from LGD to ocean entry
-* `mu_phi_Mb_M`: mean probability of surviving from hatchery release in spring to estuary (hatchery fish)
-* `mu_phi_Mb_Ma`: mean probability of surviving movement from tributary to LGD (same for both LH types)
+* `mu_phi_Mb_Ma`: mean probability of surviving movement from tributary to LGD (same for both LH types, different for origin types)
 * `mu_phi_Pa_Mb`: mean probability of surviving overwinter in tributary (`[1]`: fall migrants, `[2]`: spring migrants)
 * `mu_pi[1]`: mean probability of becoming a fall migrant LH type at end of summer
 * `mu_psi_O1_Rb`: mean probability of maturing at age 3 given survived to that point (`[1]`: females, `[2]`: males)
