--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -98,11 +98,10 @@ diag_params = list(
 )
 
 # calculate the diagnostic statistics for each group
-diags = lapply(diag_params, function(param) post_summ(post, param, Rhat = T, neff = T, mcse = T)[c("mean", "Rhat", "neff", "mcse_mean"),])
+diags = lapply(diag_params, function(param) post_summ(post, param, Rhat = T, neff = T)[c("mean", "Rhat", "neff"),])
 
 # count up the number of parameters by group that fail to meet certain thresholds
 diag_summ = t(sapply(diags, function(param) {
-  mc_cv = (param["mcse_mean",]/param["mean",]) * 100
   c(
     n_total = ncol(param),
     n_Rhat_1 = sum(param["Rhat",] > 1.05),
@@ -110,24 +109,21 @@ diag_summ = t(sapply(diags, function(param) {
     n_Rhat_3 = sum(param["Rhat",] > 1.2),
     n_neff_1 = sum(param["neff",] < 2000),
     n_neff_2 = sum(param["neff",] < 1000),
-    n_neff_3 = sum(param["neff",] < 500),
-    mc_cv_1 = sum(mc_cv > 1),
-    mc_cv_2 = sum(mc_cv > 5),
-    mc_cv_3 = sum(mc_cv > 10)
+    n_neff_3 = sum(param["neff",] < 500)
   )
 }))
 
 # format to a table
 diag_summ = as.data.frame(diag_summ)
-colnames(diag_summ) = c("Total Params", ">1.05", ">1.1", ">1.2", "<3000", "<1000", "<500", ">1%", ">5%", ">10%")
+colnames(diag_summ) = c("Total Params", ">1.05", ">1.1", ">1.2", "<3000", "<1000", "<500")
 df = cbind("Match" = unlist(lapply(diag_params, paste, collapse = ", ")), diag_summ)
 
 # render the table
-kable(df, align = "lcccccccccc") %>%
+kable(df, align = "lccccccc") %>%
   kable_styling(full_width = F, bootstrap_options = c("condensed", "striped")) %>%
-  add_header_above(c(" " = 2, "Rhat" = 3, "Neff" = 3, "MCMC SE/Mean * 100%" = 3)) %>%
+  add_header_above(c(" " = 2, "Rhat" = 3, "Neff" = 3)) %>%
   column_spec(1, monospace = T) %>%
-  column_spec(c(2,5,8), border_right = T)
+  column_spec(c(2,5), border_right = T)
 
 ```
 
